--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,8 +45,8 @@
         </div>
         
         <footer>
-            <a href="https://w3c.github.io/odrl/formal-semantics"><img src="w3ccg.png" width="20"/></a> Draft specifications at W3C ODRL Community Group<br/>
-            <a href="https://github.com/vroddon/odrlevaluator"><img src="github.png" width="20"/></a> Source code of this web application<br/>
+            <a href="https://w3c.github.io/odrl/formal-semantics"><img src="./w3ccg.png" width="20"/></a> Draft specifications at W3C ODRL Community Group<br/>
+            <a href="https://github.com/vroddon/odrlevaluator"><img src="./github.png" width="20"/></a> Source code of this web application<br/>
         </footer>
 
         <script>
