--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -85,10 +85,10 @@
             }
             function doEvaluate() {
                 var str = '' ;
-                str += 'Constraint _:0 is <font color="green">fulfilled</font><br/>';
-                str += 'Refinement _:1 is <font color="red">not fulfilled</font><br/>';
+                str += 'Constraint _:0 is <font color="green">satisfied</font><br/>';
+                str += 'Refinement _:1 is <font color="red">not satisfied</font><br/>';
                 str += 'Duty _:2 is <font color="red">not fulfilled</font><br/>'
-                str += 'Permission _:3 is <font color="red">inactive</font><br/>';
+                str += 'Permission _:3 is <font color="red">inactive</font><br/>'; 
                 str += '✅ <font color="green">The test has been pased</font><br/>';
                 document.getElementById('idEvalResults').innerHTML = str;
             }            
